load and merge respiratory disease data

--- a/00_load_data.ipynb
+++ b/00_load_data.ipynb
@@ -12,6 +12,9 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as mdates\n",
     "import matplotlib.cbook as cbook\n",
+    "from os.path import join as oj\n",
+    "from functions import load_medicare_data\n",
+    "from functions import load_respiratory_disease_data\n",
     "from functions import merge_data"
    ]
   },
@@ -31,7 +34,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Tiffany/My Documents/Research/Yu/covid-19/covid-19-geographic-risk-prediction/functions/merge_data.py:21: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support skipfooter; you can avoid this warning by specifying engine='python'.\n",
+      "/Users/Tiffany/My Documents/Research/Yu/covid-19/covid-19-geographic-risk-prediction/functions/merge_data.py:20: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support skipfooter; you can avoid this warning by specifying engine='python'.\n",
       "  diabetes = pd.read_csv(diabetes, skiprows = 2, skipfooter = 1)\n"
      ]
     }
@@ -58,12 +61,12 @@
        "       'SecondaryEntityOfFile', 'DateofFile', 'DateofCreation', 'FileLength',\n",
        "       'StateName', 'StateNameAbbreviation', 'CountyName',\n",
        "       ...\n",
-       "       'condition_HIV/AIDS', 'condition_Heart Failure', 'condition_Hepatitis',\n",
+       "       'condition_Heart Failure', 'condition_Hepatitis',\n",
        "       'condition_Hyperlipidemia', 'condition_Hypertension',\n",
        "       'condition_Ischemic Heart Disease', 'condition_Osteoporosis',\n",
        "       'condition_Psychotic Disorders', 'condition_Stroke',\n",
-       "       'Diabetes Percentage'],\n",
-       "      dtype='object', length=7233)"
+       "       'Diabetes Percentage', 'Respiratory Mortality'],\n",
+       "      dtype='object', length=7234)"
       ]
      },
      "execution_count": 3,
@@ -91,17 +94,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Tiffany/Applications/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:19: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support skipfooter; you can avoid this warning by specifying engine='python'.\n"
+      "/Users/Tiffany/Applications/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:18: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support skipfooter; you can avoid this warning by specifying engine='python'.\n"
      ]
     }
    ],
    "source": [
-    "from os.path import join as oj\n",
-    "from functions import load_medicare_data\n",
     "ahrf_data = 'data/hrsa/data_AHRF_2018-2019/processed/df_renamed.pkl'\n",
     "usafacts_data_cases = 'data/usafacts/confirmed_cases_mar22.csv'\n",
     "usafacts_data_deaths = 'data/usafacts/deaths_mar22.csv'\n",
     "diabetes_data = 'data/diabetes/DiabetesAtlasCountyData.csv'\n",
+    "resp_disease_data = 'data/respiratory_disease/IHME_USA_COUNTY_RESP_DISEASE_MORTALITY_1980_2014_NATIONAL_Y2017M09D26.XLSX'\n",
     "\n",
     "# load data\n",
     "facts = pd.read_pickle(ahrf_data)\n",
@@ -116,7 +118,9 @@
     "\n",
     "diabetes = pd.read_csv(diabetes_data, skiprows = 2, skipfooter = 1)\n",
     "diabetes = diabetes[[\"CountyFIPS\", \"Percentage\"]]\n",
-    "diabetes.columns = [\"countyFIPS\", \"Diabetes Percentage\"]"
+    "diabetes.columns = [\"countyFIPS\", \"Diabetes Percentage\"]\n",
+    "\n",
+    "resp_disease = load_respiratory_disease_data.loadRespDiseaseSheet(\"Chronic respiratory diseases\")"
    ]
   },
   {
@@ -126,19 +130,211 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>countyFIPS</th>\n",
+       "      <th>County Name</th>\n",
+       "      <th>State</th>\n",
+       "      <th>stateFIPS</th>\n",
+       "      <th>#Cases_1/22/2020</th>\n",
+       "      <th>#Cases_1/23/2020</th>\n",
+       "      <th>#Cases_1/24/2020</th>\n",
+       "      <th>#Cases_1/25/2020</th>\n",
+       "      <th>#Cases_1/26/2020</th>\n",
+       "      <th>#Cases_1/27/2020</th>\n",
+       "      <th>...</th>\n",
+       "      <th>#Cases_3/12/2020</th>\n",
+       "      <th>#Cases_3/13/2020</th>\n",
+       "      <th>#Cases_3/14/2020</th>\n",
+       "      <th>#Cases_3/15/2020</th>\n",
+       "      <th>#Cases_3/16/2020</th>\n",
+       "      <th>#Cases_3/17/2020</th>\n",
+       "      <th>#Cases_3/18/2020</th>\n",
+       "      <th>#Cases_3/19/2020</th>\n",
+       "      <th>#Cases_3/20/2020</th>\n",
+       "      <th>#Cases_3/21/2020</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Statewide Unallocated</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>Baldwin County</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1015</td>\n",
+       "      <td>Calhoun County</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>1017</td>\n",
+       "      <td>Chambers County</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>1043</td>\n",
+       "      <td>Cullman County</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 64 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "countyFIPS           int64\n",
-       "County Name         object\n",
-       "State               object\n",
-       "stateFIPS            int64\n",
-       "#Cases_1/22/2020     int64\n",
-       "                     ...  \n",
-       "#Cases_3/17/2020     int64\n",
-       "#Cases_3/18/2020     int64\n",
-       "#Cases_3/19/2020     int64\n",
-       "#Cases_3/20/2020     int64\n",
-       "#Cases_3/21/2020     int64\n",
-       "Length: 64, dtype: object"
+       "   countyFIPS            County Name State  stateFIPS  #Cases_1/22/2020  \\\n",
+       "0           0  Statewide Unallocated    AL          1                 0   \n",
+       "1        1003         Baldwin County    AL          1                 0   \n",
+       "2        1015         Calhoun County    AL          1                 0   \n",
+       "3        1017        Chambers County    AL          1                 0   \n",
+       "4        1043         Cullman County    AL          1                 0   \n",
+       "\n",
+       "   #Cases_1/23/2020  #Cases_1/24/2020  #Cases_1/25/2020  #Cases_1/26/2020  \\\n",
+       "0                 0                 0                 0                 0   \n",
+       "1                 0                 0                 0                 0   \n",
+       "2                 0                 0                 0                 0   \n",
+       "3                 0                 0                 0                 0   \n",
+       "4                 0                 0                 0                 0   \n",
+       "\n",
+       "   #Cases_1/27/2020  ...  #Cases_3/12/2020  #Cases_3/13/2020  \\\n",
+       "0                 0  ...                 0                 1   \n",
+       "1                 0  ...                 0                 0   \n",
+       "2                 0  ...                 0                 0   \n",
+       "3                 0  ...                 0                 1   \n",
+       "4                 0  ...                 0                 0   \n",
+       "\n",
+       "   #Cases_3/14/2020  #Cases_3/15/2020  #Cases_3/16/2020  #Cases_3/17/2020  \\\n",
+       "0                 1                 0                 0                 0   \n",
+       "1                 1                 1                 1                 1   \n",
+       "2                 0                 0                 0                 0   \n",
+       "3                 1                 0                 0                 0   \n",
+       "4                 0                 0                 0                 0   \n",
+       "\n",
+       "   #Cases_3/18/2020  #Cases_3/19/2020  #Cases_3/20/2020  #Cases_3/21/2020  \n",
+       "0                 0                 0                 0                 0  \n",
+       "1                 1                 1                 2                 2  \n",
+       "2                 1                 1                 1                 1  \n",
+       "3                 0                 1                 1                 1  \n",
+       "4                 0                 0                 1                 2  \n",
+       "\n",
+       "[5 rows x 64 columns]"
       ]
      },
      "execution_count": 5,
@@ -148,8 +344,7 @@
    ],
    "source": [
     "#visualize the top 5 rows\n",
-    "cases.head(5)\n",
-    "cases.dtypes"
+    "cases.head(5)"
    ]
   },
   {
@@ -468,6 +663,84 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>countyFIPS</th>\n",
+       "      <th>Respiratory Mortality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>73.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1001</td>\n",
+       "      <td>81.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>54.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>1005</td>\n",
+       "      <td>69.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>1007</td>\n",
+       "      <td>84.49</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   countyFIPS Respiratory Mortality\n",
+       "1           1                 73.44\n",
+       "2        1001                 81.79\n",
+       "3        1003                 54.28\n",
+       "4        1005                 69.82\n",
+       "5        1007                 84.49"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resp_disease.head(5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -476,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,12 +783,13 @@
     "chronic_all_orig['countyFIPS'] = chronic_all_orig['countyFIPS'].astype(int)\n",
     "df = pd.merge(facts, cases, on='countyFIPS')\n",
     "df = pd.merge(df, chronic_all_orig, on='countyFIPS')\n",
-    "df = pd.merge(df, diabetes, on='countyFIPS')"
+    "df = pd.merge(df, diabetes, on='countyFIPS')\n",
+    "df = pd.merge(df, resp_disease, on='countyFIPS')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -525,15 +799,15 @@
        "       'SecondaryEntityOfFile', 'DateofFile', 'DateofCreation', 'FileLength',\n",
        "       'StateName', 'StateNameAbbreviation', 'CountyName',\n",
        "       ...\n",
-       "       'condition_Drug Abuse', 'condition_HIV/AIDS', 'condition_Heart Failure',\n",
-       "       'condition_Hepatitis', 'condition_Hyperlipidemia',\n",
-       "       'condition_Hypertension', 'condition_Ischemic Heart Disease',\n",
-       "       'condition_Osteoporosis', 'condition_Psychotic Disorders',\n",
-       "       'condition_Stroke'],\n",
-       "      dtype='object', length=7232)"
+       "       'condition_Heart Failure', 'condition_Hepatitis',\n",
+       "       'condition_Hyperlipidemia', 'condition_Hypertension',\n",
+       "       'condition_Ischemic Heart Disease', 'condition_Osteoporosis',\n",
+       "       'condition_Psychotic Disorders', 'condition_Stroke',\n",
+       "       'Diabetes Percentage', 'Respiratory Mortality'],\n",
+       "      dtype='object', length=7234)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,16 +818,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1002, 7232)"
+       "(1002, 7234)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
