--- a/00_load_data_county_level.ipynb
+++ b/00_load_data_county_level.ipynb
@@ -35,25 +35,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/accounts/projects/vision/chandan/covid-19-geographic-risk-prediction/functions/merge_data.py:20: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support skipfooter; you can avoid this warning by specifying engine='python'.\n",
-      "  diabetes = pd.read_csv(diabetes, skiprows = 2, skipfooter = 1)\n"
+      "/accounts/projects/vision/chandan/covid-19-geographic-risk-prediction/functions/merge_data.py:26: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support skipfooter; you can avoid this warning by specifying engine='python'.\n",
+      "  \n"
      ]
     }
    ],
    "source": [
     "ahrf_data = 'data/hrsa/data_AHRF_2018-2019/processed/df_renamed.pkl'\n",
     "usafacts_data_cases = 'data/usafacts/confirmed_cases_mar22.csv'\n",
+    "usafacts_data_deaths = 'data/usafacts/deaths_mar22.csv'\n",
     "diabetes = 'data/diabetes/DiabetesAtlasCountyData.csv'\n",
     "voting = 'data/voting/county_voting_processed.pkl'\n",
     "df = merge_data.merge_data(ahrf_data=ahrf_data, \n",
     "                           usafacts_data_cases=usafacts_data_cases,\n",
+    "                           usafacts_data_deaths=usafacts_data_deaths,\n",
     "                           medicare_group=\"All Beneficiaries\",\n",
     "                           voting=voting,\n",
     "                           diabetes=diabetes) # also cleans usafacts data"
@@ -61,31 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['id', 'Header-FIPSStandCtyCode', 'EntityofFile',\n",
-       "       'SecondaryEntityOfFile', 'DateofFile', 'DateofCreation', 'FileLength',\n",
-       "       'StateName', 'StateNameAbbreviation', 'CountyName',\n",
-       "       ...\n",
-       "       'condition_Heart Failure', 'condition_Hepatitis',\n",
-       "       'condition_Hyperlipidemia', 'condition_Hypertension',\n",
-       "       'condition_Ischemic Heart Disease', 'condition_Osteoporosis',\n",
-       "       'condition_Psychotic Disorders', 'condition_Stroke',\n",
-       "       'Diabetes Percentage', 'dem_to_rep_ratio'],\n",
-       "      dtype='object', length=7234)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.keys()"
+    "list(df.keys())"
    ]
   },
   {
